add a link social

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
             <div class="footer__content">
                 <div class="footer__social">
                     <div class="social__icon">
-                        <a href="#" class="footer__social-link">
+                        <a href="https://www.youtube.com/channel/UC9nAqSXFXJSJi5qe1xBTNTA" class="footer__social-link">
                             <img src="img/youtube.svg" alt="Youtube">
                         </a>    
                         <!-- /.footer__social-link -->
-                        <a href="#" class="footer__social-link">
+                        <a href="https://www.facebook.com/birgeoku/" class="footer__social-link">
                             <img src="img/facebook.svg" alt="Facebook">
                         </a>
                         <!-- /.footer__social-link -->
-                        <a href="#" class="footer__social-link">
+                        <a href="https://www.instagram.com/birgeoku" class="footer__social-link">
                             <img src="img/instagram.svg" alt="Instagram">
                         </a>
                         <!-- /.footer__social-link -->
