add a new animation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Елбасы Академиясының қашықтан оқыту мектебі</title>
+    <!-- Подключение файла с анимацией -->
+    <link rel="stylesheet" href="css/animation.css">
     <!-- Подключение файла normalize.css для корректного отображения верстки -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Подключение файла reset.css для сброса стилей -->
