--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 <body>
 
+    <!---------- Preloader ---------->
+    <div class="preloader">
+        <div class="preloader__row">
+          <div class="preloader__item"></div>
+          <div class="preloader__item"></div>
+        </div>
+      </div>
+    <!---------- Preloader ---------->
+
     <header class="header" id="header">
         <div class="container">
             <div class="header__content">
