data-delay-animate

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="header" id="header">
         <div class="container">
             <div class="header__content">
-                <div class="header__content-logo wow fadeInLeft">
+                <div class="header__content-logo wow fadeInLeft" data-wow-delay="0.5s">
                     <a href="#" class="logo header__logo">
                         <img src="img/logo-h1.png" alt="Nursultan Nazarbaev Qory">
                     </a> 
@@ -40,7 +40,7 @@
                     <!-- /.logo header__logo -->
                 </div>
                 <!-- /.header__content-logo -->
-                <nav class="nav menu__nav wow fadeInDown">
+                <nav class="nav menu__nav wow fadeInDown" data-wow-delay="0.5s">
                     <a href="#" class="nav__item">
                         жоба туралы
                     </a>
@@ -59,7 +59,7 @@
                     <!-- /.nav__item -->
                 </nav>
                 <!-- /.nav menu__nav -->
-                <div class="contacts menu__contacts wow fadeInRight">
+                <div class="contacts menu__contacts wow fadeInRight" data-wow-delay="0.5s">
                     <a href="tel:7170" class="phone contacts__phone">
                         <img src="img/phone-call.svg" alt="Телефон" class="phone__images">
                         7170
@@ -77,15 +77,15 @@
             <div class="container">
                 <div class="hero__content">
                     <div class="hero__content-offer">
-                        <div class="hero__content-logo hero__logo wow slideInDown">
+                        <div class="hero__content-logo hero__logo wow slideInDown" data-wow-delay="0.5s">
                             <img src="img/logo-e.png" alt="Birge oqy" class="hero__logo-img">
                         </div>
                         <!-- /.hero__content-logo hero__logo -->
-                        <h1 class="hero__section-title hero__title title wow fadeInLeft">
+                        <h1 class="hero__section-title hero__title title wow fadeInLeft" data-wow-delay="0.5s">
                             Елбасы Академиясының
                         </h1>
                         <!-- /.hero__section-title title -->
-                        <span class="hero__title-desc wow slideInUp">
+                        <span class="hero__title-desc wow slideInUp" data-wow-delay="0.5s">
                             қашықтан оқыту мектебі
                         </span> 
                         <!-- /.hero__title-desc -->
@@ -95,7 +95,7 @@
                         <!-- /.btn hero__btn hero__btn-primary -->
                     </div>
                     <!-- /.hero__content-offer -->
-                    <div class="hero__content-polygon wow fadeInRight">
+                    <div class="hero__content-polygon wow fadeInRight" data-wow-delay="0.5s">
                         <div class="parallax background-tree" id="background-tree"></div>
                     </div>
                     <!-- /.hero__content-polygon -->
@@ -134,11 +134,9 @@
     
 
 
-    <!-- Подключение библиотеки Jquery -->
-    <script src="js/jquery-3.5.1.min.js"></script>
     <!-- Подключаем wow js -->
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/wow.min.js"></script>
-    <!-- Подключение главного файла со скриптами -->
     <script src="js/main.js"></script>
 </body>
 </html>
