feat add a header adaptive

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
                     </a>
                 </div>
                 <!-- /.contacts menu__contacts -->
+                <button class="menu-toggle"></button>
+                <!-- /.menu-toggle -->
+                <nav class="mob-menu">
+                    <ul class="menu">
+                      <li data-text="Home">жоба туралы</li>
+                      <li data-text="Projects">ата-аналарға</li>
+                      <li data-text="About">оқушыға</li>
+                      <li data-text="Contact">байланыс</li>
+                    </ul>
+                </nav>
             </div>
             <!-- /.header__content -->
         </div>
@@ -73,7 +83,7 @@
     <!-- /#header.header -->
 
     <main>
-        <section class="hero" id="hero">
+        <section class="hero" id="hero" style="display: none;">
             <div class="container">
                 <div class="hero__content">
                     <div class="hero__content-offer">
@@ -106,7 +116,7 @@
         <!-- /#hero.hero -->
     </main>
 
-    <footer class="footer" id="footer">
+    <footer class="footer" id="footer" style="display: none;">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__social">
