feat project done

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- /#header.header -->
 
     <main>
-        <section class="hero" id="hero" style="display: none;">
+        <section class="hero" id="hero">
             <div class="container">
                 <div class="hero__content">
                     <div class="hero__content-offer">
@@ -116,7 +116,7 @@
         <!-- /#hero.hero -->
     </main>
 
-    <footer class="footer" id="footer" style="display: none;">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__social">
