--- a/index.html
+++ b/index.html
@@ -106,7 +106,15 @@
                     </div>
                     <!-- /.hero__content-offer -->
                     <div class="hero__content-polygon wow fadeInRight" data-wow-delay="0.5s">
-                        <div class="parallax background-tree" id="background-tree"></div>
+                        <!--div class="parallax background-tree" id="background-tree"></div -->
+                        <img src="img/images-hero.png" alt="">
+                        <img src="img/01-h.png" alt="" class="hero__content-cogwheel wow zoomIn
+                        ">
+                        <img src="img/02-h.png" alt="" class="hero__content-cogwheel-2">
+                        <div class="hero__message wow fadeInUpBig
+                        " data-wow-delay="1s">
+                            <img src="img/message.png" alt="" class="hero__content-message">
+                        </div>
                     </div>
                     <!-- /.hero__content-polygon -->
                 </div>
