fear add a animation light

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                     <!-- /.hero__content-offer -->
                     <div class="hero__content-polygon wow fadeInRight" data-wow-delay="0.5s">
                         <!--div class="parallax background-tree" id="background-tree"></div -->
+                        <img src="img/lamp.gif" alt="" class="hero__content-light" auto-paly="play">
                         <img src="img/images-hero.png" alt="">
+                        <div class="shadow-point"></div>
                         <img src="img/01-h.png" alt="" class="hero__content-cogwheel wow zoomIn
                         ">
                         <img src="img/02-h.png" alt="" class="hero__content-cogwheel-2">
