feat add a light & button

--- a/index.html
+++ b/index.html
@@ -42,19 +42,23 @@
                 <!-- /.header__content-logo -->
                 <nav class="nav menu__nav wow fadeInDown" data-wow-delay="0.5s">
                     <a href="#" class="nav__item">
-                        жоба туралы
+                        <!-- жоба туралы -->
+                        <img src="img/button/01.png" alt="жоба туралы">
                     </a>
                     <!-- /.nav__item -->
                     <a href="#" class="nav__item">
-                        ата-аналарға
+                        <!-- ата-анаға -->
+                        <img src="img/button/03.png" alt="ата-анаға">
                     </a>
                     <!-- /.nav__item -->
                     <a href="#" class="nav__item">
-                        оқушыға
+                        <!-- оқушыға -->
+                        <img src="img/button/02.png" alt="оқушыға">
                     </a>
                     <!-- /.nav__item -->
                     <a href="#" class="nav__item">
-                        байланыс
+                        <!-- байланыс -->
+                        <img src="img/button/04.png" alt="байланыс">
                     </a>
                     <!-- /.nav__item -->
                 </nav>
@@ -107,7 +111,7 @@
                     <!-- /.hero__content-offer -->
                     <div class="hero__content-polygon wow fadeInRight" data-wow-delay="0.5s">
                         <!--div class="parallax background-tree" id="background-tree"></div -->
-                        <img src="img/lamp.gif" alt="" class="hero__content-light" auto-paly="play">
+                        <img src="img/lamp.gif" alt="" class="hero__content-light">
                         <img src="img/images-hero.png" alt="">
                         <div class="shadow-point"></div>
                         <img src="img/01-h.png" alt="" class="hero__content-cogwheel wow zoomIn
@@ -115,7 +119,7 @@
                         <img src="img/02-h.png" alt="" class="hero__content-cogwheel-2">
                         <div class="hero__message wow fadeInUpBig
                         " data-wow-delay="1s">
-                            <img src="img/message.png" alt="" class="hero__content-message">
+                            <img src="img/message.png" alt="" class="hero__content-message bounce-2">
                         </div>
                     </div>
                     <!-- /.hero__content-polygon -->
