feat add a images mobile bg-fone

--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
                 <nav class="nav menu__nav wow fadeInDown" data-wow-delay="0.5s">
                     <a href="#" class="nav__item">
                         <!-- жоба туралы -->
-                        <img src="img/button/01.png" alt="жоба туралы">
+                        <img src="img/button/01.png" alt="жоба туралы" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
                     <a href="#" class="nav__item">
                         <!-- ата-анаға -->
-                        <img src="img/button/03.png" alt="ата-анаға">
+                        <img src="img/button/03.png" alt="ата-анаға" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
                     <a href="#" class="nav__item">
                         <!-- оқушыға -->
-                        <img src="img/button/02.png" alt="оқушыға">
+                        <img src="img/button/02.png" alt="оқушыға" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
                     <a href="#" class="nav__item">
                         <!-- байланыс -->
-                        <img src="img/button/04.png" alt="байланыс">
+                        <img src="img/button/04.png" alt="байланыс" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
                 </nav>
