--- a/index-ru.html
+++ b/index-ru.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Елбасы Академиясының қашықтан оқыту мектебі</title>
+    <title>дистанционная школа - Академии елбасы </title>
     <!--  Подключение файла гланого файла анимации  -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Подключение файла с анимацией -->
@@ -15,7 +15,7 @@
     <!-- Подключение главного файла со стилями -->
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body id="swup" class="transition-fade">
+<body>
 
     <!---------- Preloader ---------->
     <div class="preloader">
@@ -74,10 +74,10 @@
                 <!-- /.menu-toggle -->
                 <nav class="mob-menu">
                     <ul class="menu">
-                      <li data-text="Home">жоба туралы</li>
-                      <li data-text="Projects">ата-анаға</li>
-                      <li data-text="About">оқушыға</li>
-                      <li data-text="Contact">байланыс</li>
+                      <li data-text="Home">о проекте</li>
+                      <li data-text="Projects">родителю</li>
+                      <li data-text="About">ученику</li>
+                      <li data-text="Contact">контакты</li>
                     </ul>
                 </nav>
             </div>
@@ -95,16 +95,16 @@
                             <img src="img/logo-e.png" alt="Birge oqy" class="hero__logo-img">
                         </div>
                         <!-- /.hero__content-logo hero__logo -->
-                        <h1 class="hero__section-title hero__title title wow fadeInLeft" data-wow-delay="0.5s">
-                            Елбасы Академиясының
-                        </h1>
-                        <!-- /.hero__section-title title -->
-                        <span class="hero__title-desc wow slideInUp" data-wow-delay="0.5s">
-                            қашықтан оқыту мектебі
+                        <span class="hero__title-desc-ru wow fadeInLeft" data-wow-delay="0.5s">
+                            дистанционная школа
                         </span> 
                         <!-- /.hero__title-desc -->
+                        <h1 class="hero__section-title hero__title-ru title wow slideInUp" data-wow-delay="0.5s">
+                            АКАДЕМИИ ЕЛБАСЫ
+                        </h1>
+                        <!-- /.hero__section-title title -->
                         <a href="#" class="btn hero__btn hero__btn-primary">
-                            кіру
+                            <span>войти<span>
                         </a> 
                         <!-- /.btn hero__btn hero__btn-primary -->
                     </div>
@@ -151,11 +151,11 @@
                     <!-- /.social__icon -->
                 </div>
                 <div class="footer__language">
-                    <a href="#" class="footer__language-item lang__active kaz">
+                    <a href="/index.html" class="footer__language-item kaz">
                         каз
                     </a> 
                     <!-- /.footer__language-item kaz -->
-                    <a href="/index-ru.html" class="footer__language-item ru">
+                    <a href="#" class="footer__language-item lang__active ru">
                         рус
                     </a> 
                     <!-- /.footer__language-item ru -->
@@ -171,6 +171,7 @@
 
     <!-- Подключаем wow js -->
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/swup.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 </body>
