--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <img src="img/button/02.png" alt="оқушыға" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
-                    <a href="#" class="nav__item">
+                    <a href="#" class="nav__item popup-btn" type="button">
                         <!-- байланыс -->
                         <img src="img/button/04.png" alt="байланыс" class="nav__item-img">
                     </a>
@@ -77,7 +77,7 @@
                       <li data-text="Home">жоба туралы</li>
                       <li data-text="Projects">ата-анаға</li>
                       <li data-text="About">оқушыға</li>
-                      <li data-text="Contact">байланыс</li>
+                      <li class="popup-btn">байланыс</li>
                     </ul>
                 </nav>
             </div>
@@ -166,10 +166,45 @@
         </div>
     </footer>
     <!-- /#footer.footer -->
+
+    <!-- Модальное окно -->
+    <div class="popup">
+        <div class="popup-content">
+            <button class="popup-close">
+                &times;
+            </button> 
+            <!-- /.popup-close -->
+            <h3 class="popup__title">
+                Байланыс
+            </h3>
+            <!-- /.popup__title -->
+            <div class="popup__content-link">
+                <div class="popup__content-link-tel">
+                    <img src="img/phone-call.svg" alt="Телефон">
+                    <a href="tel:+77074568776" class="popup__link-tel">
+                        +7 (707) 456-87-76
+                    </a> 
+                    <!-- /.popup__link-tel -->
+                </div>
+                <!-- /.popup__content-link-tel -->
+                <div class="popup__content-link-email">
+                    <img src="img/email.svg" alt="E-mail">
+                    <a href="#" class="popup__link-email">
+                        academy-elbasy@mail.ru
+                    </a> 
+                    <!-- /.popup__link-email -->
+                </div>
+                <!-- /.popup__content-link-tel -->
+            </div>
+            <!-- /.popup__content-link -->
+        </div>
+        <!-- /.popup-content -->
+    </div>
+    <!-- /.popup -->
     
 
 
-    <!-- Подключаем wow js -->
+    <!-- Подключение скриптов -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
