--- a/index-ru.html
+++ b/index-ru.html
@@ -32,28 +32,28 @@
         <div class="container">
             <div class="header__content">
                 <div class="header__content-logo wow fadeInLeft" data-wow-delay="0.5s">
-                    <a href="#" class="logo header__logo">
+                    <a href="index-ru.html" class="logo header__logo">
                         <img src="img/logo-h1.png" alt="Nursultan Nazarbaev Qory">
                     </a>
                     <!-- /.logo header__logo -->
-                    <a href="#" class="logo header__logo">
+                    <a href="index-ru.html" class="logo header__logo">
                         <img src="img/logo-h2.png" alt="El Umiti">
                     </a>
                     <!-- /.logo header__logo -->
                 </div>
                 <!-- /.header__content-logo -->
                 <nav class="nav menu__nav wow fadeInDown" data-wow-delay="0.5s">
-                    <a href="#" class="nav__item">
+                    <a href="files/school-pdf.pdf" download class="nav__item">
                         <!-- жоба туралы -->
                         <img src="img/button/01-ru.png" alt="жоба туралы" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
-                    <a href="#" class="nav__item">
+                    <a href="files/school-pdf.pdf" download class="nav__item">
                         <!-- ата-анаға -->
                         <img src="img/button/03-ru.png" alt="ата-анаға" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
-                    <a href="#" class="nav__item">
+                    <a href="files/school-pdf.pdf" download class="nav__item">
                         <!-- оқушыға -->
                         <img src="img/button/02-ru.png" alt="оқушыға" class="nav__item-img">
                     </a>
@@ -76,9 +76,9 @@
                 <!-- /.menu-toggle -->
                 <nav class="mob-menu">
                     <ul class="menu">
-                        <li data-text="Home">о проекте</li>
-                        <li data-text="Projects">родителю</li>
-                        <li data-text="About">ученику</li>
+                        <li data-text="Home"><a href="files/school-pdf.pdf" download>о проекте</a></li>
+                        <li data-text="Projects"><a href="files/school-pdf.pdf" download>родителю</a></li>
+                        <li data-text="About"><a href="files/school-pdf.pdf" download>ученику</a></li>
                         <li class="popup-btn">контакты</li>
                     </ul>
                 </nav>
@@ -181,20 +181,28 @@
             </h3>
             <!-- /.popup__title -->
             <div class="popup__content-link">
+                <div class="popup__content-link-website">
+                    <img src="img/global.svg" alt="Сайт">
+                    <a href="https://www.fnn.kz/main/index" class="popup__link-web">
+                        www.fnn.kz
+                    </a> 
+                    <!-- /.popup__link-web -->
+                </div>
+                <!-- /.popup__content-link-website -->
+                <div class="popup__content-link-email">
+                    <img src="../img/email.svg" alt="E-mail">
+                    <a href="#" class="popup__link-email">
+                        a.arshabayeva@elumiti.kz
+                    </a> 
+                    <!-- /.popup__link-email -->
+                </div>
+                <!-- /.popup__content-link-email -->
                 <div class="popup__content-link-tel">
                     <img src="img/phone-call.svg" alt="Телефон">
-                    <a href="tel:+77074568776" class="popup__link-tel">
-                        +7 (707) 456-87-76
+                    <a href="tel:+77172266690" class="popup__link-tel">
+                        +7 (717) 226-66-90
                     </a>
                     <!-- /.popup__link-tel -->
-                </div>
-                <!-- /.popup__content-link-tel -->
-                <div class="popup__content-link-email">
-                    <img src="img/email.svg" alt="E-mail">
-                    <a href="#" class="popup__link-email">
-                        academy-elbasy@mail.ru
-                    </a>
-                    <!-- /.popup__link-email -->
                 </div>
                 <!-- /.popup__content-link-tel -->
             </div>
