--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
         <div class="container">
             <div class="header__content">
                 <div class="header__content-logo wow fadeInLeft" data-wow-delay="0.5s">
-                    <a href="#" class="logo header__logo">
+                    <a href="index.html" class="logo header__logo">
                         <img src="img/logo-h1.png" alt="Nursultan Nazarbaev Qory">
                     </a> 
                     <!-- /.logo header__logo -->
-                    <a href="#" class="logo header__logo">
+                    <a href="index.html" class="logo header__logo">
                         <img src="img/logo-h2.png" alt="El Umiti">
                     </a> 
                     <!-- /.logo header__logo -->
                 </div>
                 <!-- /.header__content-logo -->
                 <nav class="nav menu__nav wow fadeInDown" data-wow-delay="0.5s">
-                    <a href="#" class="nav__item">
+                    <a href="files/school-pdf.pdf" download class="nav__item">
                         <!-- жоба туралы -->
                         <img src="img/button/01.png" alt="жоба туралы" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
-                    <a href="#" class="nav__item">
+                    <a href="files/school-pdf.pdf" download class="nav__item">
                         <!-- ата-анаға -->
                         <img src="img/button/03.png" alt="ата-анаға" class="nav__item-img">
                     </a>
                     <!-- /.nav__item -->
-                    <a href="#" class="nav__item">
+                    <a href="files/school-pdf.pdf" download class="nav__item">
                         <!-- оқушыға -->
                         <img src="img/button/02.png" alt="оқушыға" class="nav__item-img">
                     </a>
@@ -74,9 +74,9 @@
                 <!-- /.menu-toggle -->
                 <nav class="mob-menu">
                     <ul class="menu">
-                      <li data-text="Home">жоба туралы</li>
-                      <li data-text="Projects">ата-анаға</li>
-                      <li data-text="About">оқушыға</li>
+                      <li data-text="Home"><a href="page/about-kz.html">жоба туралы</a></li>
+                      <li data-text="Projects"><a href="files/school-pdf.pdf" download>ата-анаға</a></li>
+                      <li data-text="About"><a href="files/school-pdf.pdf" download>оқушыға</a></li>
                       <li class="popup-btn">байланыс</li>
                     </ul>
                 </nav>
@@ -179,20 +179,28 @@
             </h3>
             <!-- /.popup__title -->
             <div class="popup__content-link">
-                <div class="popup__content-link-tel">
-                    <img src="img/phone-call.svg" alt="Телефон">
-                    <a href="tel:+77074568776" class="popup__link-tel">
-                        +7 (707) 456-87-76
+                <div class="popup__content-link-website">
+                    <img src="img/global.svg" alt="Сайт">
+                    <a href="https://www.fnn.kz/main/index" class="popup__link-web">
+                        www.fnn.kz
                     </a> 
-                    <!-- /.popup__link-tel -->
+                    <!-- /.popup__link-web -->
                 </div>
-                <!-- /.popup__content-link-tel -->
+                <!-- /.popup__content-link-website -->
                 <div class="popup__content-link-email">
-                    <img src="img/email.svg" alt="E-mail">
+                    <img src="../img/email.svg" alt="E-mail">
                     <a href="#" class="popup__link-email">
                         academy-elbasy@mail.ru
                     </a> 
                     <!-- /.popup__link-email -->
+                </div>
+                <!-- /.popup__content-link-email -->
+                <div class="popup__content-link-tel">
+                    <img src="img/phone-call.svg" alt="Телефон">
+                    <a href="tel:+77172266690" class="popup__link-tel">
+                        +7 (717) 226-66-90
+                    </a> 
+                    <!-- /.popup__link-tel -->
                 </div>
                 <!-- /.popup__content-link-tel -->
             </div>
