--- a/index-ru.html
+++ b/index-ru.html
@@ -76,9 +76,9 @@
                 <!-- /.menu-toggle -->
                 <nav class="mob-menu">
                     <ul class="menu">
-                        <li data-text="Home"><a href="files/school-pdf.pdf" download>о проекте</a></li>
-                        <li data-text="Projects"><a href="files/school-pdf.pdf" download>родителю</a></li>
-                        <li data-text="About"><a href="files/school-pdf.pdf" download>ученику</a></li>
+                        <li data-text="Home"><a href="files/school-pdf.pdf" class="mobile__download-link" download>о проекте</a></li>
+                        <li data-text="Projects"><a href="files/school-pdf.pdf" class="mobile__download-link" download>родителю</a></li>
+                        <li data-text="About"><a href="files/school-pdf.pdf" class="mobile__download-link" download>ученику</a></li>
                         <li class="popup-btn">контакты</li>
                     </ul>
                 </nav>
