--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 <!-- /.menu-toggle -->
                 <nav class="mob-menu">
                     <ul class="menu">
-                      <li data-text="Home"><a href="page/about-kz.html">жоба туралы</a></li>
-                      <li data-text="Projects"><a href="files/school-pdf.pdf" download>ата-анаға</a></li>
-                      <li data-text="About"><a href="files/school-pdf.pdf" download>оқушыға</a></li>
+                      <li data-text="Home"><a href="files/school-pdf.pdf" class="mobile__download-link" download>жоба туралы</a></li>
+                      <li data-text="Projects"><a href="files/school-pdf.pdf" class="mobile__download-link" download>ата-анаға</a></li>
+                      <li data-text="About"><a href="files/school-pdf.pdf" class="mobile__download-link" download>оқушыға</a></li>
                       <li class="popup-btn">байланыс</li>
                     </ul>
                 </nav>
@@ -190,7 +190,7 @@
                 <div class="popup__content-link-email">
                     <img src="../img/email.svg" alt="E-mail">
                     <a href="#" class="popup__link-email">
-                        academy-elbasy@mail.ru
+                        a.arshabayeva@elumiti.kz
                     </a> 
                     <!-- /.popup__link-email -->
                 </div>
