feat add a lint button

--- a/index-ru.html
+++ b/index-ru.html
@@ -105,7 +105,7 @@
                             АКАДЕМИИ ЕЛБАСЫ
                         </h1>
                         <!-- /.hero__section-title title -->
-                        <a href="#" class="btn hero__btn hero__btn-primary">
+                        <a href="https://bilimland.kz/ru/login" class="btn hero__btn hero__btn-primary">
                             <span>войти<span>
                         </a>
                         <!-- /.btn hero__btn hero__btn-primary -->
