--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             қашықтан оқыту мектебі
                         </span> 
                         <!-- /.hero__title-desc -->
-                        <a href="#" class="btn hero__btn hero__btn-primary">
+                        <a href="https://bilimland.kz/kk/login" class="btn hero__btn hero__btn-primary">
                             кіру
                         </a> 
                         <!-- /.btn hero__btn hero__btn-primary -->
