--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <!-- /.popup__content-link-website -->
                 <div class="popup__content-link-email">
-                    <img src="../img/email.svg" alt="E-mail">
+                    <img src="img/email.svg" alt="E-mail">
                     <a href="#" class="popup__link-email">
                         a.arshabayeva@elumiti.kz
                     </a> 
