feat add a new title

--- a/index-ru.html
+++ b/index-ru.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>дистанционная школа - Академии елбасы </title>
+    <title>Онлайн школа - Академии елбасы </title>
     <!--  Подключение файла гланого файла анимации  -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Подключение файла с анимацией -->
@@ -98,7 +98,7 @@
                         </div>
                         <!-- /.hero__content-logo hero__logo -->
                         <span class="hero__title-desc-ru wow fadeInLeft" data-wow-delay="0.5s">
-                            дистанционная школа
+                            Онлайн школа
                         </span>
                         <!-- /.hero__title-desc -->
                         <h1 class="hero__section-title hero__title-ru title wow slideInUp" data-wow-delay="0.5s">
