--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </h1>
                         <!-- /.hero__section-title title -->
                         <span class="hero__title-desc wow slideInUp" data-wow-delay="0.5s">
-                            қашықтан оқыту мектебі
+                            онлайн мектебі
                         </span> 
                         <!-- /.hero__title-desc -->
                         <a href="https://bilimland.kz/kk/login" class="btn hero__btn hero__btn-primary">
